--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ p{
 <body style="background-color:black">
 <h1 align="center" style="color:white">一个无聊的售卖</h1>
 <h2 style="color:red">售卖内容</h2>
-<p>这是一个普通得店铺，没有拿得出手得特长。<br>
+<p>这是一个普通的店铺，没有拿得出手得特长。<br>
 本人会一些电脑知识，电脑有问题或者相关问题可以咨询（电脑范围比较广泛，无法具体详列，可以直接询问）<br>
 本人也可以代刷课之类的。<br>
 本人也可帮做一些决定或者作业（能力范围之内的），反正只要是线上可以解决的都可以来询问。
