--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ p{
 本人也可以代刷课之类的。<br>
 本人也可帮做一些决定或者作业（能力范围之内的），反正只要是线上可以解决的都可以来询问。
 </p>
-   <h2>价格可议，小本生意，小本价钱</h2>
+   <h3 style="color:white">价格可议，小本生意，小本价钱</h3>
 <p>本人qq：1656497171</p>
 </body>
 </html>
