--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ p{
 <h3 style="color:red">价格可议，小本生意，小本价钱</h3>
 <p>本人qq：1656497171</p>
   <p style="color:yello"><a href="https://m.tb.cn/h.Uqpy4wQ?tk=2XXldQPHREh" title="点击查看" target="_blank">朋友的闲鱼网店，可以点开访问关注</a></p>
-   <img src="image.jpg">
+   <img src="image.jpg" high="300px" width="300px" >
 </body>
 </html>
